--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             width: 300px;
             margin: 30px 0;
         }
+        .picture {
+            width: 100px;
+            height: 100px;
+        }
     </style>
 
 </head>
@@ -46,22 +50,22 @@
         Vue.component('product-item', {
             template: '\
                     <li class="list-item">\
-                    {{ itemData.title }}\
-                    <img :src="itemData.pic">\
-                    <a :href="itemData.link">{{ itemData.link }}</a>\
-                    <button v-on:click="countCounter">Add me</button>\
-                    <button v-on:click="deleteCounter">Delete me</button>\
+                        {{ itemData.title }}\
+                        <div>\
+                            <img :src="itemData.pic" class="picture">\
+                        </div>\
+                        <a :href="itemData.link">{{ itemData.link }}</a>\
+                        <button v-on:click="countCounter">Add me</button>\
+                        <button v-on:click="deleteCounter">Delete me</button>\
                     </li>\
                     ',
             props: ['itemData'],
             methods: {
                 countCounter: function () {
-                    this.$emit('increment'),
-                    console.log('inc')
+                    this.$emit('increment')
                 },
                 deleteCounter: function () {
-                    this.$emit('decrement'),
-                    console.log('dec')
+                    this.$emit('decrement')
                 }
             }
         });
@@ -94,10 +98,18 @@
             },
             methods: {
                 addProduct: function () {
-                    this.dataCounter += 1
+                    if (this.firstClick) {
+                        this.dataCounter += 1,
+                        this.firstClick = false
+                    }
                 },
                 delProduct: function () {
-                    this.dataCounter -= 1
+                    if (this.dataCounter > 0) {
+                        if (!this.firstClick) {
+                            this.dataCounter -= 1,
+                            this.firstClick = true
+                        }
+                    }
                 }
             }
         })
